# Robot-Controller

./: .gitmodules  CMakeLists.txt  README.md
component_manager/: CMakeLists.txt  component_manager.cpp  component_manager.h  configuration.h
diagnostics/: CMakeLists.txt  i_diagnostic.h  main.cpp  propulsion_diagnostic.cpp  propulsion_diagnostic.h
link_manager/: CMakeLists.txt  i_link_manager.h  link_manager.cpp  link_manager.h  nrf24l01_link_manager.cpp  nrf24l01_link_manager.h
link_manager/test/: link_manager_hardware_test.cpp  nrf24l01_link_manager_hardware_test.cpp
motion_controller/: CMakeLists.txt  i_motion_controller.h  motion_controller.h  track_chassis_controller.cpp  track_chassis_controller.h
motion_controller/test/: CMakeLists.txt  track_chassis_controller_test.cpp
motor_driver/: CMakeLists.txt  i_simple_motor_driver.h  simple_motor_driver.cpp  simple_motor_driver.h
motor_driver/test/: simple_motor_driver_test.cpp
remote_control_agent/: CMakeLists.txt  motion_state_convertor.h  remote_control_agent.cpp  remote_control_agent.h
remote_control_agent/test/: remote_control_agent_test.cpp
remote_control_protocol/: CMakeLists.txt  README.md  remote_control_protocol.cpp  remote_control_protocol.h  tracked_chassis_protocol.cpp  tracked_chassis_protocol.h
robot_middleware/: CMakeLists.txt  README.md  command_receiver.h  command_sender.h  motion_control_protocol.cpp  motion_control_protocol.h  remote_control_protocol.h  status_receiver.h  status_sender.h  tracked_chassis_protocol.cpp  tracked_chassis_protocol.h
robot_middleware/cmake/: robot_middlewareConfig.cmake.in
robot_middleware/test/: CMakeLists.txt  command_receiver_test.cpp  command_sender_test.cpp  motion_control_protocol_test.cpp  remote_control_protocol_test.cpp  status_receiver_test.cpp  status_sender_test.cpp  tracked_chassis_protocol_test.cpp
sensor_manager/: CMakeLists.txt  sensor_manager.cpp  sensor_manager.h
src/: CMakeLists.txt  main.cpp
track_chassis_controller/: CMakeLists.txt  i_track_chassis_controller.h  track_chassis_controller.cpp  track_chassis_controller.h
track_chassis_controller/test/: track_chassis_controller_test.cpp
